# book-lending-system

./: Cargo.toml  README.md  notes.txt  test.db
src/: auth.rs  db.rs  main.rs  models.rs  server.rs
static/: admin.html  index.html  lender.html  register.html
