[package]
name = "library"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
bcrypt = "0.16.0"
chrono = "0.4"
async-trait = {version = "0.1.87"  }
anyhow = "1.0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
