[package]
name = "library"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio",
  "macros"
] }
bcrypt = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = { version = "0.1" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

